crates/pcb/tests/snapshots/build__load_and_module_unstable_ref_warning.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: '@github/mycompany/components:main' is an unstable reference. Use a pinned version.
   ╭─[ <TEMP_DIR>/board.zen:2:6 ]
 2 │load("@github/mycompany/components:main/common.zen", "helper")
   │                            ╰─────────────────────── '@github/mycompany/components:main' is an unstable reference. Use a pinned version.

Warning: '@github/mycompany/components:main' is an unstable reference. Use a pinned version.
   ╭─[ <TEMP_DIR>/board.zen:3:18 ]
 3 │SimpleResistor = Module("@github/mycompany/components:main/SimpleResistor.zen")
   │                                                ╰─────────────────────────────── '@github/mycompany/components:main' is an unstable reference. Use a pinned version.

✓ board.zen (1 components)
