crates/pcb/tests/snapshots/build__method_chaining_unstable_ref_warning.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---
Warning: '@github/mycompany/components:main/SimpleResistor.zen:main' is an unstable reference. Use a pinned version (inline :tag or pcb.toml).
   ╭─[ <TEMP_DIR>/board.zen:3:12 ]
 3 │R = Module("@github/mycompany/components:main/SimpleResistor.zen").Resistance
   │                                      ╰─────────────────────────── '@github/mycompany/components:main/SimpleResistor.zen:main' is an unstable reference. Use a pinned version (inline :tag or pcb.toml).
--- STDERR ---

✓ board.zen (0 components)
