crates/pcb/tests/snapshots/build__mixed_aggregated_and_unique_warnings.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ board.zen (3 components)
