crates/pcb/tests/snapshots/build__mixed_suppressed_with_deny_flag.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build test.zen -Dwarnings
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Warning: Regular warning 1
   ╭─[ <TEMP_DIR>/test.zen:2:1 ]
 2 │warn("Regular warning 1")
   │            ╰───────────── Regular warning 1

Warning: Regular warning 2
   ╭─[ <TEMP_DIR>/test.zen:6:1 ]
 6 │warn("Regular warning 2")
   │            ╰───────────── Regular warning 2

Suppressed 1 error, 2 warnings
✗ test.zen: Build failed
Error: Build failed with errors
