crates/pcb/tests/snapshots/build__module_unstable_ref_warning.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---
Warning: '@github/mycompany/components:main/SimpleResistor.zen' is an unstable reference. Use a pinned version (inline :tag or pcb.toml).
   ╭─[ <TEMP_DIR>/board.zen:2:25 ]
 2 │SimpleResistor = Module("@github/mycompany/components:main/SimpleResistor.zen")
   │                                                   ╰─────────────────────────── '@github/mycompany/components:main/SimpleResistor.zen' is an unstable reference. Use a pinned version (inline :tag or pcb.toml).
--- STDERR ---

✓ board.zen (1 components)
