crates/pcb/tests/snapshots/build__pin_no_connect_suppresses_at_net_site.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Suppressed 1 warning
✓ board.zen (1 components)
