crates/pcb/tests/snapshots/build__previous_line_mixed_with_inline.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Not suppressed
   ╭─[ <TEMP_DIR>/test.zen:5:1 ]
 5 │warn("Not suppressed", kind="layout.spacing")
   │                      ╰─────────────────────── Not suppressed

Suppressed 2 warnings
✓ test.zen (0 components)
