crates/pcb/tests/snapshots/build__suppress_all_warnings_by_severity.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build test.zen -S warnings
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Suppressed 4 warnings
✓ test.zen (0 components)
