crates/pcb/tests/snapshots/build__suppress_by_hierarchical_kind.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcb build test.zen -S electrical
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Layout issue
   ╭─[ <TEMP_DIR>/test.zen:5:1 ]
 5 │warn("Layout issue", kind="layout.spacing")
   │                     ╰────────────────────── Layout issue

Suppressed 3 warnings
✓ test.zen (0 components)
